# canvas-fs

./: .env.example  .gitignore  LICENSE  README.md  __main__.py  canvas_files.py  canvas_fs.py  readme.md  requirements.txt  setup.cfg
canvasfs/: __main__.py  canvas_files.py  canvas_fs.py  utilities.py
