[metadata]
name = canvasfs
version = 0.0.0
url = https://github.com/shreyasminocha/canvas-fs
author = Shreyas Minocha
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
description = Canvas LMS FUSE Filesystem
long_description = file: readme.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.6
install_requires =
	pyfuse3
	requests
	CacheControl
	python-dotenv
	trio

[options.entry_points]
console_scripts =
	canvasfs = canvasfs:main

[build-system]
requires = ['setuptools', 'wheel']
